<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Main Definition -->
    <string name="app_name">Lifechievements</string>
   <string name="settings_name">Settings</string>
   
    
    <!-- Menu Section -->
    <string name="menu_settings">Settings</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_about">About</string>
    
    <!-- Preference Section -->
    <string name="pref_settings_general_title">General</string>
    <string name="pref_settings_language_title">Languages</string>
    <string name="pref_settings_language_dialog">Choose a language</string>
    <string name="pref_settings_language_entries">Language 1, Language 2</string>
    <string name="pref_settings_language_entryValues">1, 2</string>
    <string name="pref_settings_language_defautValue">1</string>
    
    <string name="pref_settings_network_title">Network</string>
    <string name="pref_settings_send_reports_summary">Send or not report when crash</string>
    <string name="pref_settings_send_reports_title">Crash report</string>
    
     
    
    <!-- TO DELETE ? -->
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>

</resources>
